preprocessing the annotations data

--- a/image_captioning_model.ipynb
+++ b/image_captioning_model.ipynb
@@ -144,6 +144,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess(text):\n",
+    "    text = text.lower()\n",
+    "    text = re.sub(r'[^\\w\\s]', '', text)\n",
+    "    text = re.sub('\\s+', ' ', text)\n",
+    "    text = text.strip()\n",
+    "    text = '[start] ' + text + ' [end]'\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image</th>\n",
+       "      <th>caption</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>data/coco2017/train2017/000000409744.jpg</td>\n",
+       "      <td>[start] a bathroom cubicle of toilet and sink ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>data/coco2017/train2017/000000520187.jpg</td>\n",
+       "      <td>[start] picture of a iron fence near a tree wi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>data/coco2017/train2017/000000565476.jpg</td>\n",
+       "      <td>[start] closeup of various fruits that include...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>data/coco2017/train2017/000000393922.jpg</td>\n",
+       "      <td>[start] a sign that tells people how to get to...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>data/coco2017/train2017/000000578652.jpg</td>\n",
+       "      <td>[start] a large display of bananas some of the...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      image  \\\n",
+       "0  data/coco2017/train2017/000000409744.jpg   \n",
+       "1  data/coco2017/train2017/000000520187.jpg   \n",
+       "2  data/coco2017/train2017/000000565476.jpg   \n",
+       "3  data/coco2017/train2017/000000393922.jpg   \n",
+       "4  data/coco2017/train2017/000000578652.jpg   \n",
+       "\n",
+       "                                             caption  \n",
+       "0  [start] a bathroom cubicle of toilet and sink ...  \n",
+       "1  [start] picture of a iron fence near a tree wi...  \n",
+       "2  [start] closeup of various fruits that include...  \n",
+       "3  [start] a sign that tells people how to get to...  \n",
+       "4  [start] a large display of bananas some of the...  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "captions['caption'] = captions['caption'].apply(preprocess)\n",
+    "captions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
